# DiscreteLabs

./: .gitignore  README.md
1_BooleanFunctions/: A_binary_relations.py  B_post_theorem.py  E_zhegalkin_polynomial.py  F_Khorn_sat.py  H.py
1_BooleanFunctions/BF_lib/: BoolFunction.py  bool_function_games.py  bool_function_properties.py  linear_zhegalkin_polynomial.py  zhegalkin_polynomial.py
1_BooleanFunctions/glued/: B.py  E.py
1_BooleanFunctions/rust/: Cargo.toml
1_BooleanFunctions/rust/src/: D.rs  F.rs  main.rs
BruteHT/: BoolFunction.py  ProbabilityDistribution.py  bool_functions.py  convergence_test.py  main.py  smoother.py
BruteHT/bool_functions/: BoolFunction.py  bool_function_games.py  bool_function_properties.py  bool_functions.py  zhegalkin_polynomial.py
GeneratingFunctions/: .gitignore  Cargo.toml  build.rs
GeneratingFunctions/src/: formal_series.rs  lib.rs  polynomial.rs  ring.rs
automata/: DFA.py  NFA.py  fixed_length_words_in_DFA_language.py  problem1.in  words_DFA.py
coding_lab_2/: Cargo.toml
coding_lab_2/python/: f_input.txt  g_arithmetic_encoding.py  h_arithmetic_decoding.py
coding_lab_2/src/: a_huffman.rs  b_burrows.rs  c_inverse_burrows.rs  d_move_to_front.rs  e_lzw_encode.rs  f_lzw_decode.rs  g_arpiphmetic_encoding.rs  g_arpithmetic_encoding.rs  i_hamming.rs
comb/: Cargo.toml
comb/src/: A.rs  task_13.rs  task_15.rs  task_7.rs
graphs/: .gitignore  Cargo.toml  build.rs
graphs/src/: dfs.rs  graph.rs  lib.rs  scanner.rs
