[package]
name = "coding_lab_2"
version = "0.1.0"
authors = ["donRumata <donrumata03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "a_huffman"
path = "src/a_huffman.rs"

[[bin]]
name = "b_burrows"
path = "src/b_burrows.rs"

[[bin]]
name = "c_inverse_burrows"
path = "src/c_inverse_burrows.rs"

[[bin]]
name = "d_move_to_front"
path = "src/d_move_to_front.rs"





[[bin]]
name = "g_arpiphmetic_encoding"
path = "src/g_arpiphmetic_encoding.rs"

[[bin]]
name = "i_hamming"
path = "src/i_hamming.rs"

[dependencies]
