[package]
name = "comb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "a"
path = "src/A.rs"


[[bin]]
name = "task_7"
path = "src/task_7.rs"

[[bin]]
name = "task_13"
path = "src/task_13.rs"

[[bin]]
name = "task_15"
path = "src/task_15.rs"



[dependencies]
