[package]
name = "rust"
version = "0.1.0"
authors = ["donRumata <donrumata03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "C"
path = "src/C.rs"

[[bin]]
name = "E"
path = "src/E.rs"

[[bin]]
name = "F"
path = "src/F.rs"

[[bin]]
name = "D"
path = "src/D.rs"



[dependencies]
